# serverless-test-samples

rust-test-samples/: README.md
rust-test-samples/apigw-lambda/: Cargo.toml  Makefile  template.yaml
rust-test-samples/apigw-lambda/src/: main.rs
